# ScratchGuidelines

./: .gitattributes  .gitignore  README.md  db.sqlite3  manage.py  medguides.code-workspace  pyproject.toml  requirements.txt
ScratchTables/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: All_UHD_Policies.json  Guidelines_Example_Data.json  acute_med2.json  delete_guidelines.py  load_guidelines.py  load_guidelines2.py  secondconversion.py
tableapp/: admin.py  authentication.py  filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  utils.py  views.py
tableapp/migrations/: 0001_initial.py  0002_trust_rename_guideline_customguidelines_and_more.py  0003_favoriteguideline.py  0004_rename_favoriteguideline_favouriteguideline.py  0005_alter_customguidelines_external_url_and_more.py  0006_alter_customguidelines_medical_speciality.py  0007_alter_trustguideline_external_url_and_more.py  0008_trustguideline_locality_and_more.py  0009_trustguideline_viewcount.py  0010_alter_trustguideline_viewcount.py  0011_trustguideline_authors_trustguideline_creation_date_and_more.py  0012_alter_trustguideline_version_number.py  0013_alter_trustguideline_version_number.py  0014_alter_trustguideline_authors_and_more.py  0015_trustguideline_pdf_file.py  0016_remove_trustguideline_pdf_file.py  0017_trustguideline_last_updated_date.py  0018_alter_trustguideline_description_and_more.py
tableapp/templates/: base.html
tableapp/templates/account/: login.html  signup.html
tableapp/templates/tableapp/: customTable.html  favourite_guidelines_table.html  login.html  (+1 more)
