[tool.poetry]
name = "scratch-guidelines"
version = "0.1.0"
description = "A set of NHS scratch guidelines."
authors = ["heaneySam", "mitches-got-glitches <mitch.edmunds@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-allauth = "^0.62.0"
django-filter = "^24.2"
django-tables2 = "^2.7.0"
django-widget-tweaks = "^1.5.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
